@@ -206,8 +206,9 @@
   </module>
 
   <module id="cheese">
-      <branch id="HEAD" stringfrozen="true"/>
-      <branch id="gnome-2-22" stringfrozen="true"/>
+    <branch id="HEAD" stringfrozen="false"/>
+    <branch id="gnome-2-22" stringfrozen="true"/>
+    <branch id="gnome-2-24" stringfrozen="true"/>
   </module>
 
   <module id="chronojump">
@@ -337,10 +338,11 @@
   <module id="ekiga">
     <webpage>http://ekiga.org/</webpage>
     <maintainer id="dsandras"/>
-    <branch id="HEAD" stringfrozen="true"/>
+    <branch id="HEAD" stringfrozen="false"/>
     <branch id="gnome-2-14" stringfrozen="true"/>
     <branch id="gnome-2-20" stringfrozen="true"/>
     <branch id="gnome-2-22" stringfrozen="true"/>
+    <branch id="gnome-2-24" stringfrozen="true"/>
   </module>
 
   <module id="empathy">
@@ -1725,8 +1727,9 @@
   </module>
 
   <module id="mousetweaks">
-    <branch id="HEAD" stringfrozen="true"/>
+    <branch id="HEAD" stringfrozen="false"/>
     <branch id="gnome-2-22" stringfrozen="true"/>
+    <branch id="gnome-2-24" stringfrozen="true"/>
   </module>
 
   <module id="msm">
