@@ -703,11 +703,11 @@
       <_description>GNOME desktop</_description>
       <module id="alacarte"/>
       <module id="bug-buddy" branch="gnome-2-24"/>
-      <module id="cheese"/>
+      <module id="cheese" branch="gnome-2-24"/>
       <module id="dasher"/>
       <module id="deskbar-applet"/>
       <module id="eel"/>
-      <module id="ekiga"/>
+      <module id="ekiga" branch="gnome-2-24"/>
       <module id="empathy" branch="gnome-2-24"/>
       <module id="eog"/>
       <module id="epiphany" branch="gnome-2-24"/>
@@ -761,7 +761,7 @@
       <module id="libgweather"/>
       <module id="libwnck"/>
       <module id="metacity" branch="gnome-2-24"/>
-      <module id="mousetweaks"/>
+      <module id="mousetweaks" branch="gnome-2-24"/>
       <module id="nautilus"/>
       <module id="nautilus-cd-burner"/>
       <module id="orca"/>
