@@ -1,4 +1,9 @@
-2008-09-20  Gil Forcada  <gforcada@gnome.org>
+2008-09-22  Gil Forcada  <gforcada@gnome.org>
+
+	* gnome-modules.xml.in:
+	* releases.xml.in:  Cheese, ekiga and mousetweaks branched for GNOME 2.24.
+
+2008-09-22  Gil Forcada  <gforcada@gnome.org>
 
 	* gnome-modules.xml.in:
 	* releases.xml.in: gnome-{themes,games,terminal}, gucharmap, tomboy,
